# python-service-template

./: .env.example  .pre-commit-config.yaml  Dockerfile  Justfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: run-tests.yaml
alembic/: env.py
alembic/versions/: 3c351f4a5779_init.py
src/: app.py  db.py  dependencies.py  lifespan.py  settings.py
src/api/: health_check.py  router.py
src/api/models/: health_check.py
src/services/: errors.py
src/services/models/: jwt_claims.py  user.py
src/services/models/mixins/: timestamp.py
tests/: conftest.py  settings.py  test_health_check.py
